# kogyan.cpp

./: .clang-format  Makefile.am  README.md
tool/: Makefile.am  call_clang-format.sh  check_file_name_lengths.py  filter_iwyuout.py  iwyu_mappings.imp  list_sources.py  make_precompiled_h.py
vsprops/: Makefile.am
