# Automake Settings
# Copyright (C) 2019-2026 kaoru  https://www.tetengo.org/

EXTRA_DIST = \
    application.props \
    common.props \
    common_setup.props \
    compilation.props \
    compilation_debug.props \
    compilation_release.props \
    compilation_Win32.props \
    compilation_x64.props \
    dynamic_lib.props \
    header_only_lib.props \
    installer.props \
    static_lib.props \
    test.props
